# flycatcher

./: README.md
home_work/: README.md
home_work/fly_catcher_controller/: package.xml  setup.cfg  setup.py
home_work/fly_catcher_controller/config/: params.yaml
home_work/fly_catcher_controller/fly_catcher_controller/: circular_pursuit_node.py  pursuit_node.py  velocity_pursuit_node.py
home_work/fly_catcher_controller/launch/: circular_catching.launch.py  start_catching.launch.py  velocity_catching.launch.py
home_work/fly_catcher_controller/rviz/: fly_catcher.rviz
home_work/fly_catcher_interfaces/: CMakeLists.txt  package.xml
home_work/fly_catcher_interfaces/msg/: DroneCmd.msg
home_work/fly_catcher_simulator/: package.xml  setup.cfg  setup.py
home_work/fly_catcher_simulator/fly_catcher_simulator/: drone.py  fly.py
home_work/fly_catcher_simulator/launch/: sim.launch.py
